task-8 kafka, tracing, metrics, multicreate, update
