# internal/api/ocp-requirement-api.go
@@ -2,6 +2,10 @@ package api
 
 import (
 	"context"
+	"github.com/opentracing/opentracing-go"
+	"github.com/ozoncp/ocp-requirement-api/internal/flusher"
+	"github.com/ozoncp/ocp-requirement-api/internal/kafka"
+	"github.com/ozoncp/ocp-requirement-api/internal/metrics"
 	"github.com/ozoncp/ocp-requirement-api/internal/models"
 	"github.com/ozoncp/ocp-requirement-api/internal/repository"
 	requirementApiV1Description "github.com/ozoncp/ocp-requirement-api/pkg/ocp-requirement-api"
@@ -12,12 +16,16 @@ import (
 
 type requirementApiV1 struct {
 	requirementApiV1Description.UnimplementedOcpRequirementApiServer
-	repo repository.RequirementsRepo
+	repo     repository.RequirementsRepo
+	flush    flusher.Flusher
+	producer kafka.Producer
 }
 
-func NewRequirementApiV1(repo repository.RequirementsRepo) requirementApiV1Description.OcpRequirementApiServer {
+func NewRequirementApiV1(repo repository.RequirementsRepo, flush flusher.Flusher, kafkaProducer kafka.Producer) requirementApiV1Description.OcpRequirementApiServer {
 	return &requirementApiV1{
-		repo: repo,
+		repo:     repo,
+		flush:    flush,
+		producer: kafkaProducer,
 	}
 }
 
@@ -43,7 +51,61 @@ func (r *requirementApiV1) CreateRequirementV1(
 
 	resp := &requirementApiV1Description.CreateRequirementV1Response{RequirementId: resultId}
 
+	metrics.CreateCounterInc()
+	err = r.producer.Send(
+		kafka.CreateMessage(
+			kafka.Create.String(),
+			kafka.EventContent{
+				Id:     resultId,
+				UserId: req.UserId,
+				Text:   req.Text,
+			},
+		),
+	)
+	if err != nil {
+		log.Error().Err(err).Msg("")
+		return nil, status.Error(codes.Internal, err.Error())
+	}
+
 	log.Printf("Requirement %d has been created.", resultId)
+
+	return resp, nil
+}
+
+func (r *requirementApiV1) MultiCreateRequirementV1(
+	ctx context.Context,
+	req *requirementApiV1Description.MultiCreateRequirementV1Request,
+) (*requirementApiV1Description.MultiCreateRequirementV1Response, error) {
+	if err := req.Validate(); err != nil {
+		log.Error().Err(err).Msg("")
+		return nil, status.Error(codes.InvalidArgument, err.Error())
+	}
+	tracer := opentracing.GlobalTracer()
+	span := tracer.StartSpan("MultiCreateRequirementV1")
+	ctx = opentracing.ContextWithSpan(context.Background(), span)
+	defer span.Finish()
+
+	requirements := make([]models.Requirement, 0, len(req.Requirements))
+	for _, rq := range req.Requirements {
+		requirement := models.Requirement{
+			UserId: rq.UserId,
+			Text:   rq.Text,
+		}
+		requirements = append(requirements, requirement)
+	}
+	failedRequirements := r.flush.FlushWithContext(requirements, ctx)
+
+	result := make([]*requirementApiV1Description.Requirement, 0, len(requirements))
+	for _, r := range failedRequirements {
+		result = append(
+			result,
+			&requirementApiV1Description.Requirement{
+				Id:     r.Id,
+				UserId: r.UserId,
+				Text:   r.Text,
+			})
+	}
+	resp := &requirementApiV1Description.MultiCreateRequirementV1Response{Requirements: result}
 
 	return resp, nil
 }
@@ -69,6 +131,47 @@ func (r *requirementApiV1) DescribeRequirementV1(
 		Text:   requirement.Text,
 	}
 	resp := &requirementApiV1Description.DescribeRequirementV1Response{Requirement: &result}
+
+	return resp, nil
+}
+
+func (r *requirementApiV1) UpdateRequirementV1(
+	ctx context.Context,
+	req *requirementApiV1Description.UpdateRequirementV1Request,
+) (*requirementApiV1Description.UpdateRequirementV1Response, error) {
+	if err := req.Validate(); err != nil {
+		log.Error().Err(err).Msg("")
+		return nil, status.Error(codes.InvalidArgument, err.Error())
+	}
+
+	requirement := models.Requirement{
+		Id:     req.Requirements.Id,
+		UserId: req.Requirements.UserId,
+		Text:   req.Requirements.Text,
+	}
+
+	if err := r.repo.UpdateEntity(requirement); err != nil {
+		return nil, status.Error(codes.InvalidArgument, err.Error())
+	}
+
+	resp := &requirementApiV1Description.UpdateRequirementV1Response{Updated: true}
+
+	metrics.UpdateCounterInc()
+	err := r.producer.Send(
+		kafka.CreateMessage(
+			kafka.Update.String(),
+			kafka.EventContent{
+				Id:     req.Requirements.Id,
+				UserId: req.Requirements.UserId,
+				Text:   req.Requirements.Text,
+			},
+		),
+	)
+	if err != nil {
+		log.Error().Err(err).Msg("")
+		return nil, status.Error(codes.Internal, err.Error())
+	}
+	log.Printf("Requirement %d has been updated.", req.Requirements.Id)
 
 	return resp, nil
 }
@@ -116,6 +219,19 @@ func (r *requirementApiV1) RemoveRequirementV1(
 	}
 
 	resp := &requirementApiV1Description.RemoveRequirementV1Response{Found: found}
+	metrics.RemoveCounterInc()
 
+	err = r.producer.Send(
+		kafka.CreateMessage(
+			kafka.Remove.String(),
+			kafka.EventContent{
+				Id: req.RequirementId,
+			},
+		),
+	)
+	if err != nil {
+		log.Error().Err(err).Msg("")
+		return nil, status.Error(codes.Internal, err.Error())
+	}
 	return resp, nil
 }
